--- a/css/test2.css
+++ b/css/test2.css
@@ -1,8 +1,18 @@
-.card{
-    width: 200px;
+/*.card{*/
+/*    width: 200px;*/
+/*    height: 100px;*/
+/*    padding: 1px 12px;*/
+/*    background-color: rgba(234, 233, 234, 0.68);*/
+/*    border: 1px solid rgba(224, 224, 224, 0.68);*/
+/*    border-radius: 8px;*/
+/*}*/
+.grid-box{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: repeat(3, 1fr);
+}
+.grid-item{
+    width: 100px;
     height: 100px;
-    padding: 1px 12px;
-    background-color: rgba(234, 233, 234, 0.68);
-    border: 1px solid rgba(224, 224, 224, 0.68);
-    border-radius: 8px;
+    background-color: red;
 }
