--- a/css/test2.css
+++ b/css/test2.css
@@ -8,8 +8,9 @@
 /*}*/
 .grid-box{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: repeat(3, 1fr);
+    gap: 10px;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 100px);
 }
 .grid-item{
     width: 100px;
